# lit

./: .deepsource.toml  README.md  build-wasm.sh  install.sh  package-lock.json  package.json  webpack.config.js
doc/: architecture.drawio
public/: electron.js  index.html
src/: App.css  App.js  App.jsx  App.test.js  electron.ts  index.js
src/components/: ExampleFlow.jsx  ExampleFlow2.jsx  Sidebar.jsx  Source.jsx  SourceDetails.jsx  Tag.jsx
src/css/: ExampleFlow.css  Sidebar.css  Source.css  Tag.css
src/wasm-lib/: Cargo.toml
src/wasm-lib/src/: lib.rs
