[package]
name = "wasm-lib"
version = "0.0.0"
authors = ["Dominik-Hillmann <dominik.hillmann@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.34"